[package]
name = "exchangeapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.3"
clap = { version = "4.4.7", features = ["derive"] }
error-stack = "0.4.1"
json = "0.12.4"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
