[package]
name = "exchangeapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.3"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.11.3"
error-stack = "0.4.1"
json = "0.12.4"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
log = "0.4.21"
strum = "0.26.2"
strum_macros = "0.26.2"
dotenv = "0.15.0"
